jackett/jackett-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.jackett.teklogi.systems`)
      kind: Rule
      services:
        - name: jackett
          port: 80
    - match: Host(`jackett.teklogi.systems`)
      kind: Rule
      services:
        - name: jackett
          port: 80
